
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/power_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:text="@string/power_toggle_off"
        android:onClick="togglePower"/>

    <Button
        android:id="@+id/blue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/green_button"
        android:layout_alignBottom="@+id/green_button"
        android:layout_toRightOf="@+id/green_button"
        android:text="@string/blue_button"
        android:onClick="setColor"/>

    <Button
        android:id="@+id/sunrise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/white_button"
        android:layout_alignBottom="@+id/white_button"
        android:layout_toRightOf="@+id/white_button"
        android:fontFamily="@string/sunrise_button"
        android:text="@string/sunrise_button"
        android:onClick="sunriseDance"/>

    <Button
        android:id="@+id/green_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/power_toggle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:onClick="setColor"
        android:text="@string/green_button" />

    <Button
        android:id="@+id/red_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/green_button"
        android:layout_alignBottom="@+id/green_button"
        android:layout_toLeftOf="@+id/green_button"
        android:onClick="setColor"
        android:text="@string/red_button" />

    <Button
        android:id="@+id/white_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/red_button"
        android:layout_below="@+id/green_button"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="21dp"
        android:onClick="setColor"
        android:text="@string/white_button" />

    <Button
        android:id="@+id/set_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/white_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/set_time" />

    <TextView
        android:id="@+id/connected_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/connect_msg"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
